# MidTenn_Lend_Map

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  pyproject.toml
models/bronze/: bronze_census.sql  bronze_cfpb.sql  bronze_fdic.sql  bronze_fred.sql  bronze_sba.sql
models/gold/: gold_01_loan_opportunity.sql  gold_02_industry_analysis.sql  gold_03_risk_signals.sql  gold_04_macro_trends.sql  gold_05_county_demographics.sql  gold_06_competitive_whitespace.sql  gold_07_customer_profile.sql  gold_08_loan_demand_trend.sql  gold_09_loan_health.sql  gold_10_county_coordinates.sql  gold_11_rate_sensitivity.sql  gold_12_quarterly_lending_pulse.sql  gold_13_industry_yoy_growth.sql
models/silver/: silver_census.sql  silver_cfpb.sql  silver_fdic.sql  silver_fred.sql  silver_sba.sql
src/ingestion/: census_ingestion.py  cfpb_ingestion.py  export_to_postgres.py  export_to_snowflake.py  fdic_ingestion.py  fred_ingestion.py  sba_ingestion.py  upload_to_minio.py
src/pipeline/: main_flow.py
tests/: conftest.py  test_data_quality.py  test_ingestion.py
